netcfg (1.81) unstable; urgency=low

  * Team upload
  
  [ Updated translations ]
  * Catalan (ca.po)

 -- Christian Perrier <bubulle@debian.org>  Tue, 26 Jun 2012 09:16:43 +0200

netcfg (1.80) unstable; urgency=low

  * Team upload
  
  [ Updated translations ]
  * Malayalam (ml.po) by Praveen Arimbrathodiyil

 -- Christian Perrier <bubulle@debian.org>  Sun, 24 Jun 2012 11:38:36 +0200

netcfg (1.79) unstable; urgency=low

  * Team upload

  [ Updated translations ]
  * Hebrew (he.po) by Lior Kaplan
  * Portuguese (Brazil) (pt_BR.po) by Felipe Augusto van de Wiel (faw)

 -- Christian Perrier <bubulle@debian.org>  Sun, 24 Jun 2012 08:07:31 +0200

netcfg (1.78) unstable; urgency=low

  * Team upload

  [ Updated translations ]
  * Czech (cs.po) by Miroslav Kure
  * Panjabi (pa.po) by A S Alam
  * Romanian (ro.po) by Eddy Petrișor
  * Bangali (bn.po) by Ayesha Akhtar

 -- Christian Perrier <bubulle@debian.org>  Sat, 23 Jun 2012 13:51:15 +0200

netcfg (1.77) unstable; urgency=low

  * Team upload

  [ Updated translations ]
  * Serbian (sr.po) by Karolina Kalic

 -- Christian Perrier <bubulle@debian.org>  Sat, 23 Jun 2012 07:05:30 +0200

netcfg (1.76) unstable; urgency=low

  * Team upload

  [ Updated translations ]
  * Spanish (es.po) by Javier Fernández-Sanguino Peña
  * Simplified Chinese (zh_CN.po) by YunQiang Su
  * Traditional Chinese (zh_TW.po) by Yao Wei (魏銘廷)
  * Dzongkha (dz.po) by Dawa

 -- Christian Perrier <bubulle@debian.org>  Fri, 22 Jun 2012 18:24:30 +0200

netcfg (1.75) unstable; urgency=low

  * Team upload

  [ Updated translations ]
  * Belarusian (be.po) by Viktar Siarheichyk
  * Bulgarian (bg.po) by Damyan Ivanov
  * Catalan (ca.po) by Jordi Mallach
  * Danish (da.po) by Joe Hansen
  * German (de.po) by Holger Wansing
  * Esperanto (eo.po) by Felipe Castro
  * Estonian (et.po) by Mattias Põldaru
  * Persian (fa.po) by Hamid
  * Finnish (fi.po) by Timo Jyrinki
  * French (fr.po) by Christian Perrier
  * Croatian (hr.po) by Tomislav Krznar