@@ -5,6 +5,10 @@ netcfg (1.81) unstable; urgency=low
   [ Updated translations ]
   * Catalan (ca.po)
 
+  [ Sorina Sandu ]
+  * List available ESSIDs
+    (Closes: #637128)
+
  -- Christian Perrier <bubulle@debian.org>  Tue, 26 Jun 2012 09:16:43 +0200
 
 netcfg (1.80) unstable; urgency=low
